--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Anyanwu Linda | Portfolio Website</title>
 
     <!--  ========= GOOOGLE FONTS ============ -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,500;1,900&display=swap" rel="stylesheet">
-
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,700;0,800;0,900;1,100&family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,500;1,900&display=swap" rel="stylesheet">
    <!--=============== FONT AWESOME ===============-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    
@@ -65,7 +64,7 @@
       <div class="content" >
          <div class="text">
             <h3 class="home-subtitle">
-               Hello, <span>I'm </span>
+               🙋‍♀️  Hello, <span>I'm </span>
             </h3>
             <h1 class="home-title">Anyanwu Linda Udochukwu</h1> 
             <h4 class="home-profession">< Front End Developer /></h4>
